--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 20px;
+            background-color: #f4f4f9;
+            color: #333;
         }
         input, button {
             padding: 10px;
             margin: 10px;
             font-size: 16px;
+            color:rgb(0, 0, 0);
+            border-radius: 50px;
         }
     
     </style>
